--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,6 @@ ul#nav {
 
 ul#nav li {
     width: 126px; height: 33px; float: left; padding: 13px 0 0 0;
-    background: url(images/nav-bg.png);
     font-weight: bold; text-align: center; text-transform: uppercase;
 }
     ul#nav li:nth-child(1) {
@@ -41,7 +40,7 @@ ul#nav li {
         color: #616369; text-decoration: none;
     }
         ul#nav li a:hover {
-            color: #a12121;
+            color: #f7d023;
         }
 
 #header {
@@ -53,23 +52,21 @@ ul#nav li {
     font: 38px Georgia, Serif; color: #1f1f1f; letter-spacing: 2px; margin: 0 0 20px 0;  text-align: center;
 	}
 	#header h2 {
-		width: 510px; font: 30px Georgia, Serif; color: #1f1f1f; letter-spacing: 2px; margin: 0 0 20px 0;  text-align: center;
+	font: 30px Georgia, Serif; color: #1f1f1f; letter-spacing: 2px; margin: 0 0 20px 0;  text-align: center;
 	}
-	#header p.btn a {
-		display: block; width: 225px; height: 50px; overflow: hidden;
-		background: url(images/full-stack-web-developer.png); text-indent: -9999px;
-    }
+	
     
-    #content {
-        background: url(images/content-bg.png) repeat-y;
-        padding: 57px 69px 50px 69px; overflow: hidden;
-    }
-        #content h2 {
-            font: 30px Georgia, Serif; letter-spacing: 2px; margin: 0 0 20px 0;
-        }
-    
+#content {
+    background: url(images/content-bg.png) repeat-y;
+    padding: 57px 69px 50px 69px; overflow: hidden;
+}
+       
         #content h3 {
             font: 26px Georgia, Serif; letter-spacing: 2px; margin: 0 0 20px 0;  text-align: center;
+        }
+
+        #content h4{
+            font: 26px Georgia, Serif; letter-spacing: 2px; margin: 0 0 20px 0;  text-align: left;   
         }
         
         #content p {
@@ -96,3 +93,20 @@ ul#nav li {
             font-weight: bold; text-align: center; text-transform: uppercase;
             text-decoration: none;
         }    
+
+        #footer {
+            background: url(images/footer-bg.png) no-repeat; padding: 40px 0 0 0;
+            overflow: hidden; margin: 0 0 30px 0;
+        }
+            #footer p#copyright {
+                font-size: 25px; float: left; margin: 0 0 0 30px; color: #b8b6b2;
+            }
+            #footer p#back-top {
+                font-size: 15px; float: right; margin: 0 30px 0 0;
+            }
+                #footer a {
+                color: #a12121; text-decoration: none;
+            }
+                #footer a:hover {
+                    color: #671111;
+                }        
