--- a/css/styles.css
+++ b/css/styles.css
@@ -3,10 +3,9 @@ body, div, h1, h2, h3, h4, h5, h6, p, ul, ol, li, dl, dt, dd, img, form, fieldse
 }
 
 body {
-	background: #f2f0eb url();
+	background: #dbdba2 url();
 	font: 16px Helvetica, Arial, Sans-Serif; color: #636363; line-height: 24px;
 }
-
 #container {
 	width: 960px; margin: 0 auto;
 }
@@ -15,8 +14,15 @@ body {
 	margin:30px auto 0 auto; position: relative; width: 503px;
 }
 
+img {
+    border-radius:30px;
+}
+#logo1 {
+	margin:30px auto 0 auto; position: relative; width: 503px;
+}
+
 ul#nav {
-	width: 940px; list-style: none; overflow: hidden; margin: -134px auto 25px auto;
+	width: 1040px; list-style: none; overflow: hidden; margin: -20px auto 25px auto;
 }
 
 ul#nav li {
@@ -53,14 +59,22 @@ ul#nav li {
 	}
 	#header h2 {
 	font: 30px Georgia, Serif; color: #1f1f1f; letter-spacing: 2px; margin: 0 0 20px 0;  text-align: center;
-	}
+    }
+
+    #header p {
+        text-align: center;
+    }
 	
     
 #content {
     background: url(images/content-bg.png) repeat-y;
     padding: 57px 69px 50px 69px; overflow: hidden;
 }
-       
+           
+#content h1 {
+    font: 38px Georgia, Serif; color: #1f1f1f; letter-spacing: 2px; margin: 0 0 20px 0;  text-align: center;
+}
+
         #content h3 {
             font: 26px Georgia, Serif; letter-spacing: 2px; margin: 0 0 20px 0;  text-align: center;
         }
@@ -74,10 +88,10 @@ ul#nav li {
         }
         
         #content a {
-            color: #a12121; text-decoration: none;
+            color: #0b70f3; text-decoration: none;
         }
             #content a:hover {
-                color: #671111;
+                color: #149703;
             }
         
     #content .portfolio-item {
@@ -99,14 +113,14 @@ ul#nav li {
             overflow: hidden; margin: 0 0 30px 0;
         }
             #footer p#copyright {
-                font-size: 25px; float: left; margin: 0 0 0 30px; color: #b8b6b2;
+                font-size: 25px; float: left; margin: 0 0 0 30px; color: #616060;
             }
             #footer p#back-top {
                 font-size: 15px; float: right; margin: 0 30px 0 0;
             }
                 #footer a {
-                color: #a12121; text-decoration: none;
+                color: #0b70f3; text-decoration: none;
             }
                 #footer a:hover {
-                    color: #671111;
+                    color: #ff4444;
                 }        
